initialized react app

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'/>
 </head>
 <body>
-    sdasdswdc
+    sdasdswsdcss
     <div id="root"></div>
-    <script src='./src/main.js'></script>
+    <script type="module" src='./src/main.jsx'></script>
 </body>
 </html>
